--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
-/*
-  DIAGNOSTIC STYLING
-*/
-body {
-  background: black;
-  /* color: white; */
-  color: #a7bdd3;
-}
+/**************************************
+*        DIAGNOSTIC STYLING           *
+***************************************/
 
 * {
   outline: 0px dotted grey;
 }
+
+/**************************************
+*         HTML, BODY STYLING          *
+***************************************/
 
 html {
   box-sizing: border-box;
@@ -18,8 +17,18 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  background-color: black;
+  margin: 5%;
+  /* font-family: 'Cutive Mono', monospace; */
+  font-family: 'Philosopher', sans-serif;
+  color: #a7bdd3;
+}
 
-/* Portfolio Styling */
+/**************************************
+*        PORTFOLIO STYLING            *
+***************************************/
+/*  */
 .lg-backdrop {
   background-color: black;
 }
@@ -31,13 +40,6 @@ html {
 img.lg-object.lg-image {
   border-radius: 1%;
   outline: 0;
-}
-
-body {
-  background-color: black;
-  margin: 5%;
-  /* font-family: 'Cutive Mono', monospace; */
-  font-family: 'Philosopher', sans-serif;
 }
 
 h1 {
@@ -86,10 +88,13 @@ nav {
 
 #nav ul li:hover {
   background: #1c1c1c;
-  color: red;  /* or whatever colour you want */
+  color: red;  /* or whatever */
 }
 
-/* form styles */
+/**************************************
+*            FORM STYLES              *
+***************************************/
+
 #formcomment{
   color: grey;
 }
@@ -121,6 +126,25 @@ p.copyright {
   bottom:0;
 }
 
+.footer-icon {
+  max-width: 40%;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+a.social-link img {
+  width: 55px;
+}
+
+div.div-border {
+  width: 1px;
+  max-width: 60%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-top: 40px;
+  border-top: 1px solid #a7bdd3;
+  opacity: 0.4;
+}
 
 
 
@@ -160,3 +184,99 @@ section {
   overflow: hidden;
 }
 
+
+
+
+/**************************************
+*                RWD                  *
+***************************************/
+
+@media (max-width: 900px) {
+
+
+}
+
+@media (max-width: 500px) {
+
+
+}
+
+/* Mobile 320px min */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px) {
+
+
+}
+
+/* -------- iPhone 6, 6S, 7 and 8 ---------- */
+
+/* Portrait */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+
+
+}
+
+/* Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape) { 
+
+
+}
+
+/* -------- iPhone 6+, 7+ and 8+, X --------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3) { 
+
+
+}
+
+/* ------------------ Tablet ---------------- */
+
+/* Portrait and Landscape */
+@media only screen 
+  and (min-device-width: 768px) 
+  and (max-device-width: 1112px) 
+  and (-webkit-min-device-pixel-ratio: 2) {
+
+
+}
+
+/* ----------- Non-Retina Screens ----------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+
+
+}
+
+/* ----------- Retina Screens --------------- */
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+
+
+}
+
+/* -------------- Desktop ------------------- */
+
+/* 640px is 40rem, 1280px is 80rem, etc. */
+@media screen 
+  and (min-width: 1600px) {
+
+
+}
