--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 ***************************************/
 
 * {
-  outline: 1px dotted grey;
+  outline: 0px dotted grey;
 }
 
 /**************************************
@@ -121,6 +121,29 @@ text-area, input {
   border-radius: 5%;
 } 
 
+
+/**************************************
+*            ABOUT STYLES            *
+***************************************/
+ 
+.greet {
+  margin-top: 60px;
+  font-size: 28px;
+  line-height: 1em;
+}
+
+.greet p {
+  display: inline;
+}
+
+.h1-text {
+  display: inline-block;
+
+
+
+}
+
+
 /**************************************
 *            BUTTON STYLES            *
 ***************************************/
@@ -175,12 +198,13 @@ a.social-link svg {
   padding-right: 15px;
 }
 
-.footer-div {
-
+footer#footer {
+  border-top: 1px solid white;
 }
 
 div.div-border {
-  width: 1px;
+  width: 3px;
+  height: 30px;
   max-width: 60%;
   margin-right: auto;
   margin-left: auto;
