--- a/css/styles.css
+++ b/css/styles.css
@@ -20,10 +20,9 @@ html {
 body {
   background-color: black;
   margin: 5%;
-  /* font-family: 'Cutive Mono', monospace; */
   font-family: 'Philosopher', sans-serif;
   font-size: 14px;
-  line-height: 1.4;
+  line-height: 21px;
   color: #a7bdd3;
 }
 
@@ -38,13 +37,12 @@ body#portfolio a#portfolionav,
 body#contact a#contactnav {
 	color: #a7bdd3;
   border-bottom: 1px solid #a7bdd3;
-
 }
 
 /**************************************
 *        PORTFOLIO STYLING            *
 ***************************************/
-/*  */
+
 .lg-backdrop {
   background-color: black;
 }
@@ -64,14 +62,12 @@ h1 {
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-family: 'Montserrat', sans-serif;
-
 }
 
 h3 {
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-family: 'Montserrat', sans-serif;
-
 }
 
 h1, h3, nav, a {
@@ -100,13 +96,15 @@ ul {
 }
 
 #nav {
-  display: block;
+  display: inline;
   clear: both;
 }
 
 nav {
   float: right;
   margin-bottom: 1em;
+  display: inline;
+  clear: both;
 }
 
 #nav li a:hover {
@@ -153,6 +151,7 @@ section {
 }
 
 #portfolio img {
+  margin: 10px;
   max-width: 150px;
   max-height: 150px;
   width: auto;
@@ -174,7 +173,7 @@ section {
   color: grey;
 }
 
-.photo {
+/* .photo {
   border: 2px solid cyan;
 }
 
@@ -184,7 +183,7 @@ section {
 
 .logo {
  border: 2px solid yellow;
-}
+} */
 
 .hide {
   opacity: 0;
@@ -216,11 +215,13 @@ section {
 }
 
 #contactintro {
+
   max-width: 75%;
   font-size: 18px;
   line-height: 1.5;
-  margin: 30px auto 0 auto;
+  margin: 60px auto 0 auto;
 }
+
 
 /* #contact {
   background: url(/img/aaron-burden-64849-unsplash.jpg); 
@@ -328,12 +329,13 @@ a.social-link svg {
 }
 
 
+/**************************************
+*                HOME                 *
+***************************************/
 
-
-
-
-
-
+#home {
+  height: 80vh;
+}
 
 
 /**************************************
