footer adjustment to remove whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,13 +58,7 @@ body#contact a#contactnav {
   max-height: 100%;
 }
 
-h1 {
-  margin-top: 0.3em;
-  margin-bottom: 0.3em;
-  font-family: 'Montserrat', sans-serif;
-}
-
-h3 {
+h1, h3 {
   margin-top: 0.3em;
   margin-bottom: 0.3em;
   font-family: 'Montserrat', sans-serif;
@@ -73,10 +67,13 @@ h3 {
 h1, h3, nav, a {
   color: white;
   /* color: #a7bdd3; */
-
 }
 
-a {
+/**************************************
+*              NAV STYLES             *
+***************************************/
+
+#nav a {
   text-decoration: none;
   padding-bottom: 7px;
 }
@@ -111,6 +108,7 @@ nav {
   /* background: #1c1c1c; */
   color: #a7bdd3;  /* or whatever */
 }
+
 
 main.grid section {
   max-width: 150px;
@@ -151,14 +149,87 @@ section {
 }
 
 #portfolio img {
-  margin: 10px;
-  max-width: 150px;
-  max-height: 150px;
+  margin: 0px;
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
+  overflow: hidden;
+  object-fit: cover;
+}
+
+/* #portfolio img.focal {
+  max-width: 300px;
+  max-height: 300px;
   width: auto;
   height: auto;
   overflow: hidden;
+} */
+
+
+/**************************************
+*              MAIN GRID              *
+***************************************/
+
+body {
+  margin: 0 auto;
+  max-width: 56em;
+  padding: 1em 0;
 }
 
+.maingrid {
+  /* Grid Fallback */
+  display: flex;
+  flex-wrap: wrap;
+  
+  /* Supports Grid */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-auto-rows: minmax(150px, auto);
+  grid-gap: 1em;
+}
+
+#portfolio .module {
+  /* Demo-Specific Styles */
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+
+  outline: 1px solid grey;
+  
+  /* Flex Fallback */
+  margin-left: 5px;
+  margin-right: 5px;
+  flex: 1 1 200px;
+}
+
+
+/* If Grid is supported, remove the margin we set for the fallback */
+@supports (display: grid) {
+  .module {
+    margin: 0;
+  }
+}
+
+figcaption {
+  opacity: 0;
+  width: 100%;
+  position: absolute;
+}
+
+figure {
+  background: rgba(0,  0,  255,  0.3);
+}
+
+figure:hover {
+  /* filter: blur(3px); */
+  background: rgba(0,  0,  255,  0.8)
+}
+
+figure:hover > figcaption{
+  opacity: 1;
+}
 
 /**************************************
 *          PORTFOLIO FILTER           *
@@ -333,9 +404,7 @@ a.social-link svg {
 *                HOME                 *
 ***************************************/
 
-#home {
-  height: 80vh;
-}
+
 
 
 /**************************************
