--- a/css/styles.css
+++ b/css/styles.css
@@ -401,6 +401,25 @@ a.social-link svg {
 
 
 /**************************************
+*             404 STYLES              *
+***************************************/
+
+#404 h1 {
+  text-align: center;
+  font-size: 5em;
+}
+
+#404 h3 {
+  text-align: center;
+  font-size: 3em;
+}
+
+#404 a {
+  text-align: center;
+}
+
+
+/**************************************
 *                HOME                 *
 ***************************************/
 
