--- a/css/styles.css
+++ b/css/styles.css
@@ -405,11 +405,13 @@ a.social-link svg {
 ***************************************/
 
 #404 h1 {
+  margin-top: 60px;
+  margin-bottom: 30px;
   text-align: center;
   font-size: 5em;
 }
 
-#404 h3 {
+#404 h2 {
   text-align: center;
   font-size: 3em;
 }
