update 404 svg size

--- a/css/styles.css
+++ b/css/styles.css
@@ -425,9 +425,9 @@ a.social-link svg {
 
 #404svg {
   background-color: white;
-  margin: 0 auto;
-  height: auto;
-  width: 300px;
+  margin: 30px auto;
+  max-height: 250px;
+  max-width: 250px;
 }
 
 
