--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body#contact a#contactnav {
   border-radius: 1%;
   outline: 0;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 90%;
 }
 
 h1, h3 {
@@ -109,43 +109,8 @@ nav {
   color: #a7bdd3;  /* or whatever */
 }
 
-
-main.grid section {
-  max-width: 150px;
-  max-height: 150px;
-}
-
-
-
 body {
   padding: 2em;
-}
-
-section {
-  background: rosybrown;
-  margin: 1em;
-  width: 300px;
-}
-
-.grid section,
-.list section {
-  animation: jello .5s;
-}
-
-
-/* Default, Grid View Styling */
-.grid section h2,
-.grid section p {
-  display: none;
-}
-
-/* List View */
-.list section img {
-  display: none;
-}
-
-.list section {
-  width: 600px;
 }
 
 #portfolio img {
@@ -157,14 +122,29 @@ section {
   object-fit: cover;
 }
 
-/* #portfolio img.focal {
-  max-width: 300px;
-  max-height: 300px;
-  width: auto;
-  height: auto;
-  overflow: hidden;
-} */
+.hover:hover {
+  position: relative;
+  background: black;
+}
 
+.hover:hover img {
+  opacity: 0.5;
+}
+
+.caption {
+  display: none;
+  color: white;
+}
+
+.lg-sub-html {
+	width: 50%;
+	margin: 3em auto;
+	border-radius: .5em;
+}
+
+.lg-sub-html:hover {
+	opacity: 1;
+}
 
 /**************************************
 *              MAIN GRID              *
@@ -176,10 +156,11 @@ body {
   padding: 1em 0;
 }
 
-.maingrid {
+#portfolio .maingrid {
   /* Grid Fallback */
   display: flex;
   flex-wrap: wrap;
+  margin-top: 30px;
   
   /* Supports Grid */
   display: grid;
@@ -188,8 +169,9 @@ body {
   grid-gap: 1em;
 }
 
-#portfolio .module {
+.module {
   /* Demo-Specific Styles */
+  position: relative;
   background: black;
   display: flex;
   align-items: center;
@@ -202,55 +184,57 @@ body {
   margin-left: 5px;
   margin-right: 5px;
   flex: 1 1 200px;
+  
 }
 
+.projectname {
+  display: none;
+}
+
+.module:hover .projectname{
+  display: block;
+  position: absolute;
+  text-align: center;
+  opacity: 1;
+}
 
 /* If Grid is supported, remove the margin we set for the fallback */
 @supports (display: grid) {
-  .module {
+  #gallery-1 .module {
     margin: 0;
   }
 }
 
-figure {
-  position: relative;
-}
 
-figure a {
-  background: rgba(0,  0,  255,  0.3);
-  width: 100%;
-}
 
-figure:hover > a {
+/**************************************
+*               FIGURE                *
+***************************************/
+
+a:hover img {
   filter: blur(2px);
   background: rgba(0,  0,  255,  0.8);
   opacity: 0.8;
 }
 
-
-figcaption {
-  opacity: 0;
+a.module {
+  opacity: 1;
   width: 100%;
-  position: absolute;
+  height: 100%;
   line-height: 30px;
 }
 
-figcaption h3 {
+div h3 {
   color: white;
-  font-size: 1.8em;
+  font-size: 1.6em;
   text-align: center;
 }
 
-figcaption h4 {
+div h4 {
   color: #a7bdd3;
-  font-size: 1.1em;
+  font-size: 1em;
   text-align: center;
 }
-
-figure:hover > figcaption {
-  opacity: 1;
-}
-
 
 /**************************************
 *          PORTFOLIO FILTER           *
@@ -350,6 +334,10 @@ figure:hover > figcaption {
   margin-bottom: 20px;
 }
 
+#about p {
+  color: white;
+}
+
 
 /**************************************
 *            BUTTON STYLES            *
@@ -372,6 +360,27 @@ figure:hover > figcaption {
   background: #a7bdd3;
   color: #000;
   border: 1px solid transparent;
+}
+
+/**************************************
+*                 HOME                *
+***************************************/
+
+#home img {
+  width: 100%; 
+  height: auto;
+  margin: 30px auto 30px auto;
+  display: block;
+  opacity: 1;
+}
+
+#home p {
+  color: white;
+}
+
+#docs {
+  text-align: center;
+  margin: 30px auto 30px auto;
 }
 
 /**************************************
